# uploader

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  sourceforce.md
tests/: test_cli.py  test_retry.py  test_sourceforge.py  test_sourceforge_cli.py  test_sourceforge_profile.py  test_uploaders.py
uploader/: cli.py  config.py  notifier.py  progress.py  retry.py  sourceforge.py  sourceforge_cli.py  sourceforge_profile.py  uploaders.py
