[project]
name = "uploader"
version = "0.1.3"
description = "Upload files to Pixeldrain and GoFile in parallel with live progress and Telegram notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "InquirerPy>=0.3.4",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "requests-toolbelt>=1.0.0",
  "rich>=13.9.0",
]

[project.scripts]
uploader = "uploader.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
